--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=mysql://bc8a4e2355836a:6682ef89@us-cdbr-iron-east-04.cleardb.net/heroku_b635c57b4d0a45a?reconnect=true
+spring.datasource.url=  mysql://bd0e140c07774a:97a82415@us-cdbr-iron-east-04.cleardb.net/heroku_07ef6509e3ba6ec?reconnect=trueue
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
