Arrumando bug no applicatio-prod

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,9 +1,5 @@
-<<<<<<< HEAD
-spring.datasource.url=  mysql://bd0e140c07774a:97a82415@us-cdbr-iron-east-04.cleardb.net/heroku_07ef6509e3ba6ec?reconnect=trueue
-=======
-spring.datasource.url=mysql://b75f335c99db48:e48e89e1@us-cdbr-iron-east-04.cleardb.net/heroku_f6600828daeba1a?reconnect=true
->>>>>>> parent of a08d376... Tentando arumar o deploy no Heroku
+spring.datasource.url=mysql://bd0e140c07774a:97a82415@us-cdbr-iron-east-04.cleardb.net/heroku_07ef6509e3ba6ec?reconnect=true
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.format_sql=fal
