--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,4 +2,4 @@ spring.datasource.url=mysql://bd0e140c07774a:97a82415@us-cdbr-iron-east-04.clear
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=fal
+spring.jpa.properties.hibernate.format_sql=false
